--- a/index.html
+++ b/index.html
@@ -1,89 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="si">
 <head>
   <meta charset="UTF-8">
-  <title>Loan Application</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome - CapitalLanka</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #6a3093, #a044ff);
-      height: 100vh;
+      background-color: white;
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+      font-family: 'Segoe UI', sans-serif;
     }
 
-    .card {
-      background: #ffffff;
-      border-radius: 20px;
-      padding: 30px;
-      width: 320px;
+    .welcome-container {
       text-align: center;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-    }
-
-    h2 {
-      font-size: 24px;
-      margin-bottom: 10px;
-      color: #333;
-    }
-
-    #amount {
-      font-size: 30px;
-      margin: 10px 0;
+      font-size: 2.5rem;
+      opacity: 0;
+      animation: fadeIn 2s forwards, fadeOut 2s 6s forwards;
       color: #000;
     }
 
-    input[type="range"] {
-      width: 100%;
-      margin: 20px 0;
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
     }
 
-    #returnAmount {
-      font-size: 16px;
-      color: #888;
+    @keyframes fadeOut {
+      to {
+        opacity: 0;
+      }
     }
 
-    .apply-btn {
-      margin-top: 20px;
-      background-color: #f5a623;
-      color: white;
-      border: none;
-      padding: 15px 20px;
-      width: 100%;
-      font-size: 16px;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .apply-btn:hover {
-      background-color: #d48806;
+    @media (max-width: 600px) {
+      .welcome-container {
+        font-size: 1.8rem;
+        padding: 0 10px;
+      }
     }
   </style>
 </head>
 <body>
-
-  <div class="card">
-    <h2>How much money do you need?</h2>
-    <div id="amount">Rs. 5000</div>
-    <input type="range" min="1000" max="100000" value="5000" step="500" id="loanRange">
-    <div id="returnAmount">You return: Rs. 5000</div>
-    <button class="apply-btn">APPLY LOAN</button>
+  <div class="welcome-container" id="welcomeMessage">
+    ආයුබෝවන් CapitalLanka<br>සාදරයෙන් පිළිගන්නවා!
   </div>
 
   <script>
-    const range = document.getElementById('loanRange');
-    const amountText = document.getElementById('amount');
-    const returnAmount = document.getElementById('returnAmount');
-
-    range.addEventListener('input', () => {
-      const value = parseInt(range.value);
-      amountText.textContent = Rs. ${value};
-      returnAmount.textContent = You return: Rs. ${value};
-    });
+    // Optionally, redirect after animation
+    setTimeout(() => {
+      // Example: window.location.href = "home.html";
+    }, 8000);
   </script>
-
 </body>
 </html>
