--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
     .welcome-container {
       text-align: center;
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       opacity: 0;
       animation: fadeIn 2s forwards, fadeOut 2s 6s forwards;
-      color: #000;
+      color: #66d9ff; /* ලා-නිල් පාට */
+      text-shadow: 0 0 10px #66d9ff,
+                   0 0 20px #66d9ff,
+                   0 0 30px #66d9ff,
+                   0 0 40px #66d9ff;
+      transition: all 0.3s ease-in-out;
     }
 
     @keyframes fadeIn {
@@ -37,8 +42,8 @@
 
     @media (max-width: 600px) {
       .welcome-container {
-        font-size: 1.8rem;
-        padding: 0 10px;
+        font-size: 2rem;
+        padding: 0 15px;
       }
     }
   </style>
