--- a/index.html
+++ b/index.html
@@ -1,59 +1,34 @@
 <!DOCTYPE html>
 <html lang="si">
 <head>
-  <meta charset="UTF-8">
-  <title>Welcome to CapitalLanka</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      font-family: 'Segoe UI', sans-serif;
-    }
-
-    .logo {
-      width: 150px;
-      height: auto;
-      margin-bottom: 20px;
-      animation: fadeInLogo 2s ease-in-out forwards;
-    }
-
-    .welcome {
-      font-size: 2.5em;
-      color: #0056B8; /* Logo එකේ නිල් පාට */
-      opacity: 0;
-      animation: fadeInText 3s ease-in-out 2s forwards; /* 2s delay after logo */
-    }
-
-    @keyframes fadeInLogo {
-      0% {
-        opacity: 0;
-        transform: scale(0.8);
-      }
-      100% {
-        opacity: 1;
-        transform: scale(1);
-      }
-    }
-
-    @keyframes fadeInText {
-      0% {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Capital Online Loan Lanka</title>
+    <style>
+        body {
+            text-align: center;
+            font-family: 'Arial', sans-serif;
+            background-color: white;
+            margin: 0;
+            padding: 0;
+        }
+        .welcome-text {
+            color: #0047AB; /* නිල් පාට */
+            font-size: 28px;
+            margin-top: 20px;
+        }
+        .logo {
+            max-width: 300px;
+            margin-top: 50px;
+        }
+    </style>
 </head>
 <body>
-  <img src="logo.jpeg" alt="CapitalLanka Logo" class="logo">
-  <div class="welcome">CapitalLanka වෙත සාදරයෙන් පිළිගන්නවා</div>
+
+    <!-- Logo Image -->
+    <img src="441B681C-F189-4224-A783-F151C34A0CF0.jpeg" alt="Capital Logo" class="logo">
+
+    <!-- Welcome Message -->
+    <div class="welcome-text">ආයුබෝවන් ඔබ සාදරයෙන් පිළිගන්නවා</div>
+
 </body>
 </html>
