--- a/index.html
+++ b/index.html
@@ -21,16 +21,30 @@
 
         .welcome-text {
             color: #0047AB;
-            font-size: 8vw; /* Mobile-friendly font size */
+            font-size: 8vw; /* Responsive font size */
             margin-top: 20px;
-            opacity: 1;
-            animation: fadeOut 5s forwards; /* Fade out after 5 seconds */
+            opacity: 0;
+            transform: scale(0.5);
+            animation: zoomFade 5s forwards;
         }
 
-        @keyframes fadeOut {
-            0% { opacity: 1; }
-            80% { opacity: 1; }
-            100% { opacity: 0; display: none; }
+        @keyframes zoomFade {
+            0% {
+                opacity: 0;
+                transform: scale(0.5);
+            }
+            30% {
+                opacity: 1;
+                transform: scale(1.1);
+            }
+            70% {
+                opacity: 1;
+                transform: scale(1);
+            }
+            100% {
+                opacity: 0;
+                transform: scale(1);
+            }
         }
     </style>
 </head>
