--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     <img src="441B681C-F189-4224-A783-F151C34A0CF0.jpeg" alt="Capital Logo" class="logo">
 
     <!-- Welcome Message -->
-    <div class="welcome-text">ආයුබෝවන් ඔබව සාදරයෙන් පිලිගන්නවා</div>
+    <div class="welcome-text">"ආයුබෝවන්! Capital Lanka වෙත ඔබව සාදරයෙන් පිළිගනිමු."
+</div>
 
 </body>
 </html>
