--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         .welcome-text {
             color: #0047AB;
-            font-size: 8vw; /* Responsive font size */
+            font-size: 8vw; /* Responsive size */
             margin-top: 20px;
             opacity: 0;
             transform: scale(0.5);
@@ -50,12 +50,12 @@
 </head>
 <body>
 
-    <!-- Logo Image -->
-    <img src="441B681C-F189-4224-A783-F151C34A0CF0.jpeg" alt="Capital Logo" class="logo">
+    <!-- External Logo Image -->
+    <img src="https://i.ibb.co/ksMKWMNK/Whats-App-Image-2025-05-14-at-11-11-50-db83447a.jpg" 
+         alt="Capital Logo" class="logo">
 
-    <!-- Welcome Message -->
-    <div class="welcome-text">"ආයුබෝවන්! Capital Lanka වෙත ඔබව සාදරයෙන් පිළිගනිමු."
-</div>
+    <!-- Animated Welcome Text -->
+    <div class="welcome-text">ආයුබෝවන් ඔබව සාදරයෙන් පිලිගන්නවා</div>
 
 </body>
 </html>
