--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
          alt="Capital Logo" class="logo">
 
     <!-- Animated Welcome Text -->
-    <div class="welcome-text">ආයුබෝවන් ඔබව සාදරයෙන් පිලිගන්නවා</div>
+    <div class="welcome-text">"ආයුබෝවන්! Capital Lanka වෙත ඔබව සාදරයෙන් පිළිගනිමු."
+</div>
 
 </body>
 </html>
