--- a/index.html
+++ b/index.html
@@ -17,34 +17,46 @@
             max-width: 80%;
             height: auto;
             margin-top: 40px;
+            animation: fadeIn 2s ease-in-out forwards;
         }
 
         .welcome-text {
             color: #0047AB;
-            font-size: 8vw; /* Responsive size */
-            margin-top: 20px;
+            font-size: 5vw; /* Smaller starting size */
+            margin-top: 30px;
             opacity: 0;
-            transform: scale(0.5);
-            animation: zoomFade 5s forwards;
+            transform: scale(0.8);
+            animation: smoothZoomFade 6s ease-in-out forwards;
         }
 
-        @keyframes zoomFade {
+        @keyframes smoothZoomFade {
             0% {
                 opacity: 0;
-                transform: scale(0.5);
+                transform: scale(0.8);
+                font-size: 4vw;
             }
-            30% {
+            25% {
                 opacity: 1;
-                transform: scale(1.1);
+                transform: scale(1.05);
+                font-size: 6vw;
             }
-            70% {
-                opacity: 1;
+            50% {
                 transform: scale(1);
+                font-size: 5.5vw;
+            }
+            75% {
+                opacity: 1;
             }
             100% {
                 opacity: 0;
                 transform: scale(1);
+                font-size: 5vw;
             }
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
     </style>
 </head>
@@ -55,8 +67,9 @@
          alt="Capital Logo" class="logo">
 
     <!-- Animated Welcome Text -->
-    <div class="welcome-text">"ආයුබෝවන්! Capital Lanka වෙත ඔබව සාදරයෙන් පිළිගනිමු."
-</div>
+    <div class="welcome-text">
+        "ආයුබෝවන්! Capital Lanka වෙත ඔබව සාදරයෙන් පිළිගනිමු."
+    </div>
 
 </body>
 </html>
