--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         .welcome-text {
             color: #0047AB;
-            font-size: 5vw; /* Smaller starting size */
+            font-size: 5vw;
             margin-top: 30px;
             opacity: 0;
             transform: scale(0.8);
@@ -70,6 +70,13 @@
     <div class="welcome-text">
         "ආයුබෝවන්! Capital Lanka වෙත ඔබව සාදරයෙන් පිළිගනිමු."
     </div>
+
+    <!-- Auto Redirect Script -->
+    <script>
+        setTimeout(() => {
+            window.location.href = "https://capitallanka3.github.io/capital-la/";
+        }, 6000); // redirect after 6 seconds
+    </script>
 
 </body>
 </html>
